2009-11-01  Michel Hermier  <michel.hermier@gmail.com>

	* src/su.c: Set the default ENV_SUPATH to
	/sbin:/bin:/usr/sbin:/usr/bin (i.e. PATH when no ENV_SUPATH is
	specified).

2009-10-15  Thorsten Kukuk  <kukuk@suse.de>

	* src/faillog.c, man/faillog.8.xml: Harmonize long option in code
	and documentation. Use --lock-secs instead of --lock-time.

2009-10-05  Miroslav Kure  <kurem@upcase.inf.upol.cz>

	* po/cs.po: updated to 412t

2009-09-29  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: updated to 412t

2009-09-27  Miroslav Kure  <kurem@upcase.inf.upol.cz>

	* po/cs.po: updated to 411t1f

2009-09-24  Christian Perrier  <bubulle@debian.org>

	* man/po/fr.po: Updated French translation to 835t99f165

2009-09-24  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: updated to 348t30f34u

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid pre-decrement operator (--n). Add some
	comments.
	* libmisc/cleanup.c: Fix off by one in an assertion.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Fix indentation.
	* src/su.c: Add more messages for translation.
	* src/su.c: Ignore kill() return value when sending the TERM
	signal. If it fails, a KILL should be sent anyway.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: When su receives a signal, wait for the child to
	terminate (after sending a SIGTERM), and kill it only if it did
	not terminate by itself. No delay will be enforced if the child
	cooperates. See http://bugs.gentoo.org/282094
	* NEWS, man/su.1.xml: Document su's exit values.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: The default value for the CREATE_MAIL_SPOOL
	variable (i.e. if CREATE_MAIL_SPOOL= is specified without any
	values) is "no", not DCREATE_MAIL_SPOOL ("CREATE_MAIL_SPOOL=").

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>
