@@ -1,7 +1,7 @@
 <!--
    Copyright (c) 1991 - 1993, Julianne Frances Haugh
    Copyright (c) 1991 - 1993, Chip Rosenthal
-   Copyright (c) 2007 - 2008, Nicolas François
+   Copyright (c) 2007 - 2009, Nicolas François
    All rights reserved.
   
    Redistribution and use in source and binary forms, with or without
@@ -36,7 +36,8 @@
       the superuser login. The value can be preceded by
       <replaceable>PATH=</replaceable>, or a colon separated list of paths
       (for example <replaceable>/sbin:/bin:/usr/sbin:/usr/bin</replaceable>).
-      The default value is <replaceable>PATH=/bin:/usr/bin</replaceable>.
+      The default value is
+      <replaceable>PATH=/sbin:/bin:/usr/sbin:/usr/bin</replaceable>.
     </para>
     <!-- TODO: it can in fact be used to set any other variable-->
   </listitem>
